# lalaviem

./: CMakeLists.txt  README.md
IR/: app.ll  app_handmade.ll
src/: IR_generator.cpp  Pass_start.cpp  app.c  buildIRGen.sh  log.c  sim.c  sim.cpp  sim.h  start.c  trace_parser.py
